--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,45 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(lynxmotion_ssc32)
+project(sodahead_ctl)
 
-find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs trajectory_msgs)
+find_package(catkin REQUIRED COMPONENTS
+  message_generation roscpp sensor_msgs trajectory_msgs roslib)
+FIND_PACKAGE(Boost REQUIRED COMPONENTS system)
+FIND_PACKAGE(yaml-cpp REQUIRED)
+
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+add_service_files(FILES
+  CalibrateServo.srv
+)
+
+generate_messages()
 
 catkin_package(
    INCLUDE_DIRS include
-   LIBRARIES ssc32_driver ssc32
-   CATKIN_DEPENDS roscpp
+   LIBRARIES sodahead_driver sodahead
+   CATKIN_DEPENDS message_runtime roscpp roslib
 )
 
-include_directories(include
+include_directories(
+  include
   ${catkin_INCLUDE_DIRS}
+  ${Boost_INCLUDE_DIR}
 )
 
-add_library(ssc32 src/ssc32.cpp)
-target_link_libraries(ssc32 ${catkin_LIBRARIES})
+add_library(sodahead src/sodahead.cpp)
+target_link_libraries(sodahead ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-add_library(ssc32_driver src/ssc32_driver.cpp)
-target_link_libraries(ssc32_driver ssc32 ${catkin_LIBRARIES})
+add_library(sodahead_driver src/sodahead_driver.cpp)
+add_dependencies(sodahead_driver ${${PROJECT_NAME}_EXPORTED_TARGETS})
+target_link_libraries(sodahead_driver sodahead ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${YAML_CPP_LIBRARIES})
 
-add_executable(ssc32_node src/ssc32_node.cpp)
-target_link_libraries(ssc32_node ssc32_driver ${catkin_LIBRARIES})
+add_executable(sodahead_node src/sodahead_node.cpp)
+target_link_libraries(sodahead_node sodahead_driver ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-add_executable(test_ssc32 src/test_ssc32.cpp)
-target_link_libraries(test_ssc32 ssc32_driver ${catkin_LIBRARIES})
+#add_executable(test_sodahead src/test_sodahead.cpp)
+#target_link_libraries(test_sodahead sodahead_driver ${catkin_LIBRARIES})
 
-install(TARGETS ssc32 ssc32_driver ssc32_node test_ssc32
+install(TARGETS sodahead sodahead_driver sodahead_node #test_sodahead
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
@@ -33,3 +47,4 @@ install(TARGETS ssc32 ssc32_driver ssc32_node test_ssc32
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
+
